...
Blueberries consist of 14% carbohydrates, 0.7% protein, 0.3% fat and 84% water (table). They contain only negligible amounts of micronutrients, with moderate levels (relative to respective Daily Values) (DV) of the essential dietary mineral manganese, vitamin C, vitamin K and dietary fiber (table).

Generally, nutrient contents of blueberries are a low percentage of the DV (table). One serving provides a relatively low caloric value of 57 kcal with a glycemic load of 6.''',
    nutrition: ['240 kJ (57 kcal)', '9.96 g', '0.33 g', '0.74 g', 'A, B1, B2, B3, B5, B6, B9, C, E, K', 'Calcium, Iron, Magnasium, Manganese, Phosphorus, Sodium, Zinc'],
  ),
  Fruit(
    title: 'Strawberry',
    headline: 'Widely appreciated for its characteristic aroma,  red color, juicy texture, and sweetness.',
    image: 'assets/images/strawberry.png',
    gradientColors: [Color(0xFFFF809B), Color(0xFFFF0059)],
    description: '''
The garden strawberry (or simply strawberry; Fragaria × ananassa) is a widely grown hybrid species of the genus Fragaria, collectively known as the strawberries, which are cultivated worldwide for their fruit. The fruit is widely appreciated for its characteristic aroma, bright red color, juicy texture, and sweetness. It is consumed in large quantities, either fresh or in such prepared foods as ja

...
The current world market is dominated by the cultivar 'Tommy Atkins', a seedling of 'Haden' that first fruited in 1940 in southern Florida and was initially rejected commercially by Florida researchers.[22] Growers and importers worldwide have embraced the cultivar for its excellent productivity and disease resistance, shelf life, transportability, size, and appealing color.[23] Although the Tommy

Generally, ripe mangoes have an orange-yellow or reddish peel and are juicy for eating, while exported fruit are often picked while underripe with green peels. Although producing ethylene while ripening, unripened exported mangoes do not have the same juiciness or flavor as fresh fruit.''',
    nutrition: ['250 kJ (60 kcal)', '13.7 g', '0.38 g', '0.82 g', 'A, B1, B2, B3, B5, B6, B9, C, E, K', 'Calcium, Iron, Magnasium, Manganese, Phosphorus, Potassium, Sodium, Zinc'],
  ),
  Fruit(
    title: 'Watermelon',
    headline: 'Sweet, bell-shaped fruits that have been enjoyed since ancient times. They can be eaten crisp or soft.',
    image: 'assets/images/watermelon.png',
    gradientColors: [Color(0xFF84F476), Color(0xFF3B9834)],
    description: '''
Watermelon (Citrullus lanatus) is a plant species in the family Cucurbitaceae, a vine-like flowering plant originally domesticated in West Africa. It is a highly cultivated fruit worldwide, having more than 1000 varieties.

...
