...
                      MaterialPageRoute(
                        builder: (context) => const FruitListView(),
                      ),
                    );
                  },
                  icon: const Icon(Icons.arrow_forward),
                  label: const Text('Start'),
                ),
              ),
            ),
          ],
        ),
      ),
...
